feat: add content extraction/update, minor refactoring and docs
